force-app/main/default/objects/Order/fields/Coverage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_End_Date__c</fullName>
    <description>멤버십 또는 시즌권의 혜택과 이용 기간이 종료되는 날짜를 기록</description>
    <inlineHelpText>멤버십 또는 시즌권의 혜택과 이용 기간이 종료되는 날짜를 기록</inlineHelpText>
    <label>Coverage End Date</label>
    <type>Date</type>
</CustomField>