force-app/main/default/objects/Order/fields/Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <description>멤버십 또는 시즌권의 혜택과 이용 기간이 시작되는 날짜를 기록</description>
    <inlineHelpText>멤버십 또는 시즌권의 혜택과 이용 기간이 시작되는 날짜를 기록</inlineHelpText>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>