force-app/main/default/objects/Order/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>티켓 구매 주문이 적용되는 경기를 참조(티켓 구매 주문에만 사용)</description>
    <inlineHelpText>티켓 구매 주문이 적용되는 경기를 참조(티켓 구매 주문에만 사용)</inlineHelpText>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>