force-app/main/default/objects/Order/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <description>멤버십 가입의 현재 이용 상태를 기록(갱신은 별도 오브젝트 없이 이 필드의 상태 변경으로 관리함)</description>
    <inlineHelpText>멤버십 가입의 현재 이용 상태를 기록(갱신은 별도 오브젝트 없이 이 필드의 상태 변경으로 관리함)</inlineHelpText>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>