force-app/main/default/objects/Order/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>주문이 티켓 구매, 굿즈 구매 또는 멤버십 가입 중 어떤 거래에 해당하는지 구분</description>
    <inlineHelpText>주문이 티켓 구매, 굿즈 구매 또는 멤버십 가입 중 어떤 거래에 해당하는지 구분</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Purchase</fullName>
            </value>
            <value>
                <fullName>Goods Purchase</fullName>
            </value>
            <value>
                <fullName>Membership Enrollment</fullName>
            </value>
            <value>
                <fullName>Season Ticket Enrollment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>