force-app/main/default/objects/Order/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>주문의 결제, 취소 또는 환불 상태를 기록(주문의 Draft·Activated 상태와는 별도로 관리)</description>
    <inlineHelpText>주문의 결제, 취소 또는 환불 상태를 기록(주문의 Draft·Activated 상태와는 별도로 관리)</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>