force-app/main/default/objects/Order/fields/Purchase_Channel__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Channel__c</fullName>
    <description>주문이 온라인 또는 경기장 현장 중 어느 채널에서 발생했는지 구분</description>
    <inlineHelpText>주문이 온라인 또는 경기장 현장 중 어느 채널에서 발생했는지 구분</inlineHelpText>
    <label>Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Stadium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>