force-app/main/default/objects/Order/fields/Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Refund_Date__c</fullName>
    <description>주문에 대한 환불이 처리된 날짜를 기록</description>
    <inlineHelpText>주문에 대한 환불이 처리된 날짜를 기록</inlineHelpText>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>