force-app/main/default/objects/Order/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <description>환불 사유</description>
    <inlineHelpText>환불 사유</inlineHelpText>
    <label>Refund Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Order_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>단순변심</fullName>
            </value>
            <value>
                <fullName>경기취소</fullName>
            </value>
            <value>
                <fullName>일정변경</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>상품불량</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>