force-app/main/default/objects/Order/fields/SDO_OMS_Order_Indicator__c.field-meta.xml
<CustomField>
    <fullName>SDO_OMS_Order_Indicator__c</fullName>
    <description>This is an icon field indicating status, tied to the Order Status field.</description>
    <formula>IMAGE(SDO_OMS_Order_URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;Draft&quot;, &quot;015bm00000CrkRG&amp;oid=00Dbm00000tk7QJ&quot;, 
&quot;Active&quot;, &quot;015bm00000CrkRH&amp;oid=00Dbm00000tk7QJ&quot;, 
&quot;Activated&quot;, &quot;015bm00000CrkRH&amp;oid=00Dbm00000tk7QJ&quot;, 
&quot;015bm00000CrkRH&amp;oid=00Dbm00000tk7QJ&quot;),&quot;Status&quot;,24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>