force-app/main/default/objects/Order/fields/SDO_Service_Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Estimated_Delivery_Date__c</fullName>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>